Fix sidebar scroll on mobile view

--- a/src/style.css
+++ b/src/style.css
@@ -114,7 +114,6 @@ span {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
-	overflow: hidden;
 }
 #sidebar #add-project {
 	margin-bottom: 34px;
